objects/Coaching_Session__c.object
<CustomObject>
    <fields>
        <fullName>Applied_Critical_Questions__c</fullName>
        <description>Boolean response questions that are not marked N/A.</description>
        <inlineHelpText>The total number of Critical Questions applied towards this session. There can be 10 critical questions in total out of which 2 can be marked ‘N/A’/ The applied.</inlineHelpText>
        <label>Applied Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Business Critical, Compliance Critical, End User Critical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>notEqual</operation>
            <value>N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Applied_Max_Score__c</fullName>
        <description>Total Max score on all related questions where the response is not equal to N/A.</description>
        <inlineHelpText>The sum of Max Score for all the Non Critical Questions answered (any answer other than ‘None’.</inlineHelpText>
        <label>Applied Max Score</label>
        <summarizedField>Coaching_Session_Question__c.Max_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response_Scale__c</field>
            <operation>notContain</operation>
            <value>Boolean</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>equals</operation>
            <value>Met Expectations, Partially Met Expectations, Did Not Meet Expectations, Remarkable, Often Exceeds Expectations, Improvement Needed, Unsatisfactory, Expectations Met</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Applied_Noncritical_Questions__c</fullName>
        <inlineHelpText>The total number of Noncritical questions that are not excluded with "N/A".</inlineHelpText>
        <label>Applied Noncritical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Noncritical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>notEqual</operation>
            <value>N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Areas_of_improvement__c</fullName>
        <description>Areas of improvement identified</description>
        <inlineHelpText>Areas of improvement identified</inlineHelpText>
        <label>Areas of improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <description>Type of Compliance audit done</description>
        <inlineHelpText>Type of Compliance audit done</inlineHelpText>
        <label>Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updating Email Address</fullName>
                </value>
                <value>
                    <fullName>Creating case in an Internal Account/Contact</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Forwarded to Sales</fullName>
                </value>
                <value>
                    <fullName>Creating Child Cases</fullName>
                </value>
                <value>
                    <fullName>Agent Disconnection</fullName>
                </value>
                <value>
                    <fullName>Call/Callback compliance</fullName>
                </value>
                <value>
                    <fullName>Missing Follow up + Unclosed Cases</fullName>
                </value>
                <value>
                    <fullName>Cases under General Query</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Not Entitled cases</fullName>
                </value>
                <value>
                    <fullName>Chats without cases</fullName>
                </value>
                <value>
                    <fullName>Calls without Cases</fullName>
                </value>
                <value>
                    <fullName>Runaway Timers</fullName>
                </value>
                <value>
                    <fullName>Deferred Cases Turnaround Time</fullName>
                </value>
                <value>
                    <fullName>Case Deletion</fullName>
                </value>
                <value>
                    <fullName>GOMP cases</fullName>
                </value>
                <value>
                    <fullName>Refer to third party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle_Card_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Bundle Card Item</label>
        <referenceTo>Bundle_Card_Item__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Impact_on_Business_Client__c</fullName>
        <description>Impact of Critical error on business</description>
        <inlineHelpText>Impact of Critical error on business</inlineHelpText>
        <label>CE Impact on Business/Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CE_Reason__c</fullName>
        <description>Reason for critical error</description>
        <inlineHelpText>Reason for critical error</inlineHelpText>
        <label>CE Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>Type of call reviewed</description>
        <inlineHelpText>Type of call reviewed</inlineHelpText>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Session_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Additional ROCs Discussion</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc Call</fullName>
                </value>
                <value>
                    <fullName>API Setup Call</fullName>
                </value>
                <value>
                    <fullName>App Review Call</fullName>
                </value>
                <value>
                    <fullName>Event Kick Off</fullName>
                </value>
                <value>
                    <fullName>Event Launch Call</fullName>
                </value>
                <value>
                    <fullName>Event Scope Call</fullName>
                </value>
                <value>
                    <fullName>Final Walk Through Call</fullName>
                </value>
                <value>
                    <fullName>First Draft Walk through</fullName>
                </value>
                <value>
                    <fullName>General Discussion Call</fullName>
                </value>
                <value>
                    <fullName>Kickoff Call</fullName>
                </value>
                <value>
                    <fullName>Marketing Call</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Premium Features Call</fullName>
                </value>
                <value>
                    <fullName>ROC 1 Discussion</fullName>
                </value>
                <value>
                    <fullName>ROC 2 Discussion</fullName>
                </value>
                <value>
                    <fullName>ROC 3 Discussion</fullName>
                </value>
                <value>
                    <fullName>Setup Call</fullName>
                </value>
                <value>
                    <fullName>Spot Check</fullName>
                </value>
                <value>
                    <fullName>Strategic Support Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <description>Category of case being reviewed</description>
        <inlineHelpText>Category of case being reviewed</inlineHelpText>
        <label>Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Framework Building</fullName>
                </value>
                <value>
                    <fullName>Manual tasks</fullName>
                </value>
                <value>
                    <fullName>Submissions/ Resubmissions</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>App Transfer</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Builder submission</fullName>
                </value>
                <value>
                    <fullName>Enterprise Help</fullName>
                </value>
                <value>
                    <fullName>Enterprise submission walk-through</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>ROC 1</fullName>
                </value>
                <value>
                    <fullName>ROC 2</fullName>
                </value>
                <value>
                    <fullName>Self-publishing - Builder submission</fullName>
                </value>
                <value>
                    <fullName>Self-Publishing Help</fullName>
                </value>
                <value>
                    <fullName>Self-submission walk-through</fullName>
                </value>
                <value>
                    <fullName>Customer Data Management</fullName>
                </value>
                <value>
                    <fullName>Contract Processing</fullName>
                </value>
                <value>
                    <fullName>Invoicing</fullName>
                </value>
                <value>
                    <fullName>Documentation Request</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>Remittance Requests</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Contract Error – Sales/Reporting</fullName>
                </value>
                <value>
                    <fullName>Collection Follow up</fullName>
                </value>
                <value>
                    <fullName>Invoice and Contract Details</fullName>
                </value>
                <value>
                    <fullName>POC/Address</fullName>
                </value>
                <value>
                    <fullName>CC Payment</fullName>
                </value>
                <value>
                    <fullName>Sales Tax/Vat</fullName>
                </value>
                <value>
                    <fullName>Credit/Refund</fullName>
                </value>
                <value>
                    <fullName>Payment Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <description>Reason of case being reviewed</description>
        <inlineHelpText>Reason of case being reviewed</inlineHelpText>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Build</fullName>
                </value>
                <value>
                    <fullName>Enterprise Communication</fullName>
                </value>
                <value>
                    <fullName>Enterprise Errors</fullName>
                </value>
                <value>
                    <fullName>API Setup</fullName>
                </value>
                <value>
                    <fullName>App Graphics</fullName>
                </value>
                <value>
                    <fullName>Beacon set up</fullName>
                </value>
                <value>
                    <fullName>Build - Folder Set up</fullName>
                </value>
                <value>
                    <fullName>Click Setup</fullName>
                </value>
                <value>
                    <fullName>CLIs &amp; Lis</fullName>
                </value>
                <value>
                    <fullName>Data Imports</fullName>
                </value>
                <value>
                    <fullName>Email out</fullName>
                </value>
                <value>
                    <fullName>Email Response</fullName>
                </value>
                <value>
                    <fullName>Event Center Setup</fullName>
                </value>
                <value>
                    <fullName>Image Uploads/Doc Uploads</fullName>
                </value>
                <value>
                    <fullName>Mapping and Remapping</fullName>
                </value>
                <value>
                    <fullName>Polling Set up</fullName>
                </value>
                <value>
                    <fullName>RM: Account Review</fullName>
                </value>
                <value>
                    <fullName>RM: Call Follow Up</fullName>
                </value>
                <value>
                    <fullName>RM: Call Preparation</fullName>
                </value>
                <value>
                    <fullName>RM: Internet Communication</fullName>
                </value>
                <value>
                    <fullName>RM: Project Task Work</fullName>
                </value>
                <value>
                    <fullName>RM: Tech Issues</fullName>
                </value>
                <value>
                    <fullName>Clone the Event</fullName>
                </value>
                <value>
                    <fullName>Social Wall</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Copying content from the website/Client Source</fullName>
                </value>
                <value>
                    <fullName>Creating Parent-child sessions</fullName>
                </value>
                <value>
                    <fullName>Delete duplicate records Manually</fullName>
                </value>
                <value>
                    <fullName>Downloading  images/doc from the website</fullName>
                </value>
                <value>
                    <fullName>Bulk Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Type of case reviewed</description>
        <inlineHelpText>Type of case reviewed</inlineHelpText>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Session_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Client Call</fullName>
                </value>
                <value>
                    <fullName>Custom/Maintenance</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mock Call</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>PA Built</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Reflag</fullName>
                </value>
                <value>
                    <fullName>Spot Check</fullName>
                </value>
                <value>
                    <fullName>Web2Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Meeting</label>
        <referenceTo>Client_Meeting__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach_Being_Evaluated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Coach Being reviewed</description>
        <inlineHelpText>Coach Being reviewed</inlineHelpText>
        <label>Coach Being Evaluated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User reviewing the record</description>
        <inlineHelpText>This is the person performing the coaching and feedback session.</inlineHelpText>
        <label>Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coaching_Appeal_Comments__c</fullName>
        <label>Coaching Appeal Comments</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coaching_Opportunity_Type__c</fullName>
        <description>Issue categorized by the Coach - Skill/Will</description>
        <inlineHelpText>Issue categorized by the Coach - Skill/Will</inlineHelpText>
        <label>Coaching Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skill Issue</fullName>
                </value>
                <value>
                    <fullName>Will Issue</fullName>
                </value>
                <value>
                    <fullName>None (100% Score)</fullName>
                </value>
                <value>
                    <fullName>Oversight/ One-off error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coaching_Type__c</fullName>
        <description>Type of Coaching done</description>
        <inlineHelpText>Type of Coaching done</inlineHelpText>
        <label>Coaching Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EBSB</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>ROL</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Drivers__c</fullName>
        <label>Compliance Drivers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CallBack process - 2 hours TAT missed</fullName>
                </value>
                <value>
                    <fullName>CallBack process - Callback delayed</fullName>
                </value>
                <value>
                    <fullName>CallBack process - Callback missed</fullName>
                </value>
                <value>
                    <fullName>CallBack process - CallBack notes missing</fullName>
                </value>
                <value>
                    <fullName>CallBack process - CallBack Owner not setup correctly</fullName>
                </value>
                <value>
                    <fullName>CallBack Process - CB scheduled unnecessarily</fullName>
                </value>
                <value>
                    <fullName>Call Back process - Checkbox Delayed/checked before schedule</fullName>
                </value>
                <value>
                    <fullName>CallBack process - Checkbox not checked</fullName>
                </value>
                <value>
                    <fullName>CallBack process - Other</fullName>
                </value>
                <value>
                    <fullName>Calls without Case - Case not created</fullName>
                </value>
                <value>
                    <fullName>Calls without Case - Other</fullName>
                </value>
                <value>
                    <fullName>Case Creation - Incorrect Account Used</fullName>
                </value>
                <value>
                    <fullName>Case Creation - Incorrect Contact Used</fullName>
                </value>
                <value>
                    <fullName>Case Creation - Other</fullName>
                </value>
                <value>
                    <fullName>Case Management - Abrupt Closure</fullName>
                </value>
                <value>
                    <fullName>Case Management - Case created incorrectly</fullName>
                </value>
                <value>
                    <fullName>Case Management - Case created late</fullName>
                </value>
                <value>
                    <fullName>Case Management - Case Documentation process</fullName>
                </value>
                <value>
                    <fullName>Case Management - CLS missing</fullName>
                </value>
                <value>
                    <fullName>Case Management - Contact merged incorrectly</fullName>
                </value>
                <value>
                    <fullName>Case Management - Delayed closure</fullName>
                </value>
                <value>
                    <fullName>Case Management - Incomplete comments</fullName>
                </value>
                <value>
                    <fullName>Case Management - Incorrect case status</fullName>
                </value>
                <value>
                    <fullName>Case Management - Other</fullName>
                </value>
                <value>
                    <fullName>Case Management - Timer not correct</fullName>
                </value>
                <value>
                    <fullName>Cases under General Query - Incomplete Probing</fullName>
                </value>
                <value>
                    <fullName>Cases under General Query - Incomplete Research</fullName>
                </value>
                <value>
                    <fullName>Cases under General Query - Incorrect Case Creation</fullName>
                </value>
                <value>
                    <fullName>Cases under General Query - Other</fullName>
                </value>
                <value>
                    <fullName>Chats without cases - Case not created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Business_Critical_Questions__c</fullName>
        <inlineHelpText>Total number of Business Critical questions.</inlineHelpText>
        <label>Count of Business Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Business Critical</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Compliance_Critical_Questions__c</fullName>
        <inlineHelpText>The total number of Compliance Critical questions.</inlineHelpText>
        <label>Count of Compliance Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Compliance Critical</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Critical_Questions__c</fullName>
        <description>The total number of Critical Questions for this session.
How many possible critical questions are there.</description>
        <inlineHelpText>The total number of Critical Questions for this session.</inlineHelpText>
        <label>Count of Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Business Critical, Compliance Critical, End User Critical</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_End_User_Critical_Questions__c</fullName>
        <inlineHelpText>Total number of end User Critical Questions.</inlineHelpText>
        <label>Count of End User Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>End User Critical</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Noncritical_Questions__c</fullName>
        <inlineHelpText>Total number of noncritical questions.</inlineHelpText>
        <label>Count of Noncritical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Noncritical</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_and_Email_verified__c</fullName>
        <description>Check for Phone/Email updates from the client</description>
        <inlineHelpText>Check for Phone/Email updates from the client</inlineHelpText>
        <label>Customer Phone and Email verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details_of_Skill_Will_Issue__c</fullName>
        <description>comments for Skill/Will issue identified</description>
        <inlineHelpText>comments for Skill/Will issue identified</inlineHelpText>
        <label>Details of Skill/Will Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field for Workit Timer</description>
        <inlineHelpText>Field for Workit Timer</inlineHelpText>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <description>driver for a satisfactory/unsatisfactory record</description>
        <inlineHelpText>driver for a satisfactory/unsatisfactory record</inlineHelpText>
        <label>Driver</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Session_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ability to coordinate resources</fullName>
                </value>
                <value>
                    <fullName>Article Attached</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Consultative Approach</fullName>
                </value>
                <value>
                    <fullName>Explanation</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Process Knowledge</fullName>
                </value>
                <value>
                    <fullName>Professionalism</fullName>
                </value>
                <value>
                    <fullName>Responsiveness/Availability</fullName>
                </value>
                <value>
                    <fullName>Understanding Needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Calls_Chats_Coached_mins__c</fullName>
        <description>duration of call/chat reviewed</description>
        <inlineHelpText>duration of call/chat reviewed</inlineHelpText>
        <label>Duration of Calls/Chats Coached (mins)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Session_In_Minutes__c</fullName>
        <label>Duration of Session (In Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EB_SB_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>EB SB Project</label>
        <referenceTo>EB_SB_Builder__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>